--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
     implementation group: 'net.nurigo', name: 'javaSDK', version: '2.2'
     implementation group: 'com.sun.mail', name: 'jakarta.mail', version: '2.0.1'
+    implementation 'org.springframework.boot:spring-boot-starter-quartz'
+    implementation 'net.coobird:thumbnailator:0.4.8'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
