--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+    implementation 'org.springframework.boot:spring-boot-starter-quartz'
     implementation group: 'net.nurigo', name: 'javaSDK', version: '2.2'
     implementation group: 'com.sun.mail', name: 'jakarta.mail', version: '2.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
